# gpt-function-decorator

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
examples/: async_function.py  write_a_movie_script.py  writer_and_critic.py
examples/games/: cheater_guess_the_word.py  guess_the_word.py  role_playing_game.py
gpt_function/: gpt_function.py
gpt_function_decorator/: __init__.py  arg_utils.py  generate_prompt.py  gpt_function.py
test/: test_gpt_function.py
tests/: test_gpt_function.py
