[project]
name = "gpt-function-decorator"
version = "0.5"
description = "Decorator to define GPT-powered functions"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "Zulko"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "openai>=1.41",
    "PyYAML"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/zulko/gpt-function-decorator"
Changelog = "https://github.com/zulko/gpt-function-decorator/releases"
Issues = "https://github.com/zulko/gpt-function-decorator/issues"
CI = "https://github.com/zulko/gpt-function-decorator/actions"


[project.optional-dependencies]
test = ["pytest"]
